Fix T98949: Deleting vertex group in geometry nodes affects others

The vertex group indices stored in the weights need to be accounted for
when the vertex group list on the mesh changes.